force-app/main/default/objects/Office_Visit__c/Office_Visit__c.object-meta.xml
<CustomObject>
    <label>Office Visit</label>
    <nameField>
        <displayFormat>VISIT-{00000000}</displayFormat>
        <label>Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Office Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>