force-app/main/default/objects/Office_Visit__c/fields/Duration_hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_hours__c</fullName>
    <formula>IF(!ISBLANK(Exit__c), (Exit__c - Entry__c) * 24, NULL)</formula>
    <label>Duration (hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>