force-app/main/default/objects/Office_Visit__c/fields/Entry__c.field-meta.xml
<CustomField>
    <fullName>Entry__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Entry</label>
    <type>DateTime</type>
</CustomField>