force-app/main/default/objects/Office_Visit__c/fields/Exit__c.field-meta.xml
<CustomField>
    <fullName>Exit__c</fullName>
    <label>Exit</label>
    <type>DateTime</type>
</CustomField>