force-app/main/default/objects/Office_Visit__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Office Visits</relationshipLabel>
    <relationshipName>Office_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>