force-app/main/default/objects/Office_Visit__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>Floor that the visit took place on.</description>
    <formula>Room__r.Floor__c</formula>
    <inlineHelpText>Floor that the visit took place on.</inlineHelpText>
    <label>Floor</label>
    <type>Text</type>
</CustomField>