force-app/main/default/objects/Office_Visit__c/fields/GPBUDVM_Demo_Record__c.field-meta.xml
<CustomField>
    <fullName>GPBUDVM_Demo_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPBUDVM Demo Record</label>
    <type>Checkbox</type>
</CustomField>