force-app/main/default/objects/Office_Visit__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Room visited.</inlineHelpText>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Office Visits</relationshipLabel>
    <relationshipName>Office_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>