force-app/main/default/objects/Office_Visit__c/fields/Visitor__c.field-meta.xml
<CustomField>
    <fullName>Visitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Office Visits</relationshipLabel>
    <relationshipName>Office_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>