force-app/main/default/objects/Office_Visit__c/fields/Visitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Type__c</fullName>
    <label>Visitor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>