force-app/main/default/objects/Office_Visit__c/recordTypes/Office_Visit.recordType-meta.xml
<RecordType>
    <fullName>Office_Visit</fullName>
    <active>true</active>
    <label>Office Visit</label>
</RecordType>