force-app/main/default/objects/Office_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Visitor__c</columns>
    <columns>Visitor_Type__c</columns>
    <columns>Facility__c</columns>
    <columns>Room__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Entry__c</columns>
    <columns>Exit__c</columns>
    <columns>Duration_hours__c</columns>
    <columns>Hand_Crafted_for_Demo_Scenario__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>