force-app/main/default/objects/Office_Visit__c/listViews/Vendor_Visits.listView-meta.xml
<ListView>
    <fullName>Vendor_Visits</fullName>
    <columns>NAME</columns>
    <columns>Visitor__c</columns>
    <columns>Visitor_Type__c</columns>
    <columns>Facility__c</columns>
    <columns>Room__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Entry__c</columns>
    <columns>Exit__c</columns>
    <columns>Duration_hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visitor_Type__c</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <label>Vendor Visits</label>
</ListView>